--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
         <item>Ongoing Roadworks</item>
         <item>Planned Roadworks</item>
     </string-array>
+    <string name="title_activity_maps">Map</string>
 </resources>
