WIP: route polyline

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -38,4 +38,5 @@
     <string name="tab_text_1">Current Incidents</string>
     <string name="tab_text_2">On-going Roadworks</string>
     <string name="tab_text_3">Planned Roadworks</string>
+    <string name="maps_direction_url">https://maps.googleapis.com/maps/api/directions/json?</string>
 </resources>
